--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>John Kevin M. Padro - Portfolio</title>
     <link rel="stylesheet" href="style.css" />
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 </head>
 <body>
    
@@ -30,7 +31,7 @@
   <section class="home" id="home">
     <div class="home-content">
         <h1>Hi, I am <span>Kevin</span></h1>
-        <h3>I'm a <span>BS Math Graduate</span></h3>
+        <h3>I am into <span class="typing-text"></span></h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores quasi in maiores dolorum. Reiciendis quidem eius iste ipsum voluptate beatae! Cum quia sint laborum dolores libero distinctio maiores ratione aliquam.</p>
 
 
