--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <a href="#home">Home</a>
         <a href="#about">About</a>
         <a href="#services">Services</a>
+        <a href="#skills">Skills</a>
         <a href="#contact">Contact</a>
     </nav>
   </header>  
@@ -30,9 +31,10 @@
 
   <section class="home" id="home">
     <div class="home-content">
-        <h1>Hi, I am <span>Kevin</span></h1>
+        <h1>Hello World,</h1>
+        <h1>I am <span>Kevin</span></h1>
         <h3>I am into <span class="typing-text"></span></h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores quasi in maiores dolorum. Reiciendis quidem eius iste ipsum voluptate beatae! Cum quia sint laborum dolores libero distinctio maiores ratione aliquam.</p>
+        
 
 
         <div class="social-icons">
@@ -74,8 +76,9 @@
 
         <div class="about-content">
             <h2>About <span>Me</span></h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis porro commodi velit quibusdam dignissimos voluptatibus quam, aut fugit quis nisi tempore error totam consequatur maiores doloremque fuga, beatae explicabo quos?</p>
-            <a href="#" class="btn">Read More</a>
+            <p>A Mathematics graduate from Cebu City and have passionate about tackling mathematical challenges, from basic to Olympiad-level. Deeply interested in mathematical modeling, multi-criteria decision-making, and algebraic structures in research. My enthusiasm for Statistics has grown into a focus on Data Science. <br><br>
+
+Skilled in programming, particularly in Python for data science and scientific computing, R for statistical analysis, and C/C++ for software development. I am also eager to expand my knowledge by exploring additional programming languages such as Java, HTML/CSS/JavaScript, and frameworks like React, Angular, and Vue.</p>
         </div>
     </section>
 
@@ -111,6 +114,15 @@
             </div>
         </div>
     </section>
+
+
+    <section class="skills" id="skills">
+        
+    </section>
+
+
+
+
 
     <section class="contact" id="contact">
         <h2 class="heading">Contact <span>Me</span></h2>
